# AutoDA

./: .env.example  .gitignore  README.md  pyproject.toml  test.ipynb
examples/: adult.py  balance_scale.py  beam_balance.py  concrete.py  forest_balance.py  insurance.py  pitstop.py  quickstart_timeweb.py  titanic.py  wine.py
src/autoda/: __init__.py  beam.py  beam_viz.py  column_typer.py  dataset.py  evaluator.py  experiment_log.py  graph.py  pipeline.py  preprocessor.py  profile_summary.py  profiler.py  prompts.py  runner.py  state.py  tools.py  transformer.py
src/autoda/actions/: catalog.py  clean.py  encode.py  fe.py  info.py  info_new.py  insight.py  lambda_transform.py  registry.py  select.py
src/autoda/models/: __init__.py  factory.py  gigachat.py  models.py  timeweb.py
tests/: test_graph_smoke.py
