[project]
name = "autoda"
version = "0.1.0"
description = "Iterative LangGraph agent for pandas datasets"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autoda*"]