[project]
name = "autoda"
version = "0.1.0"
description = "Iterative LangGraph agent for pandas datasets"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "ydata-profiling>=4.8",
    "pyarrow>=15",
    "category-encoders>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autoda*"]